Fix overflow bug

--- a/src/theme/_custom.css
+++ b/src/theme/_custom.css
@@ -20,3 +20,7 @@ ion-textarea{
 ion-textarea textarea {
 	min-height: 60px; 
 }
+
+.ion-page {
+	overflow: inherit;
+}
